# calaos_remote_ui

./: .gitignore  .gitmodules  CMakeLists.txt  build_linux.sh  sdkconfig.defaults  sdkconfig.defaults.esp32p4
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
cmake/: sources.cmake
common/: display_backend_selector.cpp  display_backend_selector.h  logging.h  lv_conf_platform.h.in
components/bsp_extra/: idf_component.yml
components/mongoose/: CHECKSUMS.json
components/smooth_ui_toolkit_esp32/: CMakeLists.txt
flux/: app_dispatcher.cpp  app_dispatcher.h  app_event.h  app_store.cpp  app_store.h  flux.h  thread_safety.h
fonts/: generate.sh
hal/: hal.cpp  hal.h  hal_display.h  hal_input.h  hal_network.h  hal_system.h  hal_types.h  logging.h
hal/esp32/: esp32_hal.cpp  esp32_hal.h  esp32_hal_display.cpp  esp32_hal_display.h  esp32_hal_input.cpp  esp32_hal_input.h  esp32_hal_network.cpp  esp32_hal_network.h  esp32_hal_system.cpp  esp32_hal_system.h
hal/linux/: linux_hal.cpp  linux_hal.h  linux_hal_display.cpp  linux_hal_display.h  linux_hal_input.cpp  linux_hal_input.h  linux_hal_network.cpp  linux_hal_network.h  linux_hal_system.cpp  linux_hal_system.h  logging.cpp  logging.h  lv_conf_platform.h.in
main/: CMakeLists.txt  app_main.cpp  app_main.h  calaos_discovery.cpp  calaos_discovery.h  calaos_page.cpp  calaos_page.h  calaos_protocol.cpp  calaos_protocol.h  calaos_websocket_manager.cpp  calaos_websocket_manager.h  calaos_widget.cpp  calaos_widget.h  hmac_authenticator.cpp  hmac_authenticator.h  idf_component.yml  image_sequence_animator.cpp  image_sequence_animator.h  linker.lf  lv_conf.h  lvgl_timer.cpp  lvgl_timer.h  main.cpp  page_base.cpp  page_base.h  provisioning_crypto.cpp  provisioning_crypto.h  provisioning_manager.cpp  provisioning_manager.h  provisioning_requester.cpp  provisioning_requester.h  stack_view.cpp  stack_view.h  startup_page.cpp  startup_page.h  test_page.cpp  test_page.h  theme.cpp  theme.h  version.h  (+2 more)
main/fonts/: fonts.cmake  roboto_bold_22.c  roboto_bold_24.c  roboto_bold_26.c  roboto_bold_28.c  roboto_bold_32.c  roboto_bold_40.c  roboto_bold_48.c  roboto_bold_50.c  roboto_light_22.c  roboto_light_24.c  roboto_light_26.c  roboto_light_28.c  roboto_light_32.c  roboto_light_40.c  roboto_light_48.c  roboto_medium_22.c  roboto_medium_24.c  roboto_medium_26.c  roboto_medium_28.c  roboto_medium_32.c  roboto_medium_40.c  roboto_medium_48.c  roboto_regular_22.c  roboto_regular_24.c  roboto_regular_26.c  roboto_regular_28.c  roboto_regular_32.c  roboto_regular_40.c  roboto_regular_48.c
main/widgets/: light_switch_wide_widget.cpp  light_switch_wide_widget.h  light_switch_widget.cpp  light_switch_widget.h  scenario_widget.cpp  scenario_widget.h  temperature_widget.cpp  temperature_widget.h  widget_error.cpp  widget_error.h
network/: calaos_net.cpp  calaos_net.h  network_types.h
network/http/: http_client.cpp  http_client.h  http_types.h
network/udp/: udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
network/websocket/: websocket_client.cpp  websocket_client.h  websocket_types.h
scripts/: LVGLImage.py
smooth_ui_toolkit/example/utils/: lv_conf.h
smooth_ui_toolkit/src/lvgl/lvgl_cpp/: obj.h
